# astral-gem-theme

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
tests/: index.test.ts
tests/highlighting/: .adonisrc  .blade.php  .cpp  .d.ts  .dart  .go  .java  .lua  .php  .py  .r  .rb  .scss  .sh  .swift  .test.js  .test.ts  .ts  .tsx  .vim  .vue  .yaml  CMakeLists.txt  Makefile  dockerfile  gatsby-config.js  package.json  webpack.config.js
tests/syntax-icons/: .blade.php  .gql  .php  .scss  .ts  tsconfig.json
themes/: Astroid Theme-color-theme.json
